# mlops-zoomcamp

./: .gitignore  README.md  pyproject.toml
00-optional-prediction/: duration-prediction.ipynb
01-intro/: duration-prediction.ipynb
02-training/experiment_tracking/: duration-prediction.ipynb
02-training/model_usage/: model-usage.ipynb
03-orchestration/notebook_to_script/: duration-prediction.ipynb  duration-prediction.py  run_id.txt
04-deployment/batch/: README.md  score.ipynb  score.py
04-deployment/streaming/: README.md
04-deployment/web-service/: Dockerfile  README.md  predict.py  pyproject.toml
04-deployment/web-service-mlflow/: README.md  predict.py  pyproject.toml  random-forest.ipynb  test-predict-request.py  test-predict.py
