[project]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "The pyproject file of a personal repo for MLOps Zoomcamp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nodejs>=0.1.1",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
