[project]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "The pyproject file of a personal repo for MLOps Zoomcamp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mlflow>=2.14,<3",
    "nodejs>=0.1.1",
    "pandas>=2.0,<3",
    "pyarrow>=14.0,<20",
    "scikit-learn>=1.4",
    "seaborn>=0.13.2",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
