[project]
name = "web-service-mlflow"
version = "0.1.0"
description = "Web service to predict NYC taxi trip duration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "mlflow>=3.14.0",
    "scikit-learn==1.8.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
